--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Pico Botella</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="question_how_to_play">¿Como se juega?</string>
+    <string name="text_how_to_play">Los jugadores forman un circulo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. \nEl jugador que señale la botella debe de cumplir el reto que lanza la app, de lo contrario abandona el juego.
+    </string>
+    <string name="question_who_wins">¿Quién gana?</string>
+    <string name="text_who_wins">Gana el último jugador que no abandone el juego</string>
 </resources>
